--- a/index.html
+++ b/index.html
@@ -3,5 +3,7 @@
 <body>
 <h1>Hello World</h1>
 <p>I'm hosted with GitHub Pages.</p>
+<p>This page is a WORK IN PROGRESS.
+At the moment I am using it for learn Web Pages.</p>
 </body>
 </html>
