--- a/index.html
+++ b/index.html
@@ -4,6 +4,6 @@
 <h1>Hello World</h1>
 <p>I'm hosted with GitHub Pages.</p>
 <p>This page is a WORK IN PROGRESS.
-At the moment I am using it for learn Web Pages.</p>
+At the moment I am using it to learn Web Pages.</p>
 </body>
 </html>
