--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 <p>This page is a WORK IN PROGRESS.
 At the moment I am using it to learn Web Pages.</p>
 </body>
-<div><area href = "lisa.html" 				  alt="Io, Lisa"           							shape = "circle"   coords="143,201,30">
+<div>
         <area href = "page0.html" alt="TEST" 	shape = "circle"   coords="67,237,30">
 		  </map>
 </div>
