--- a/index.html
+++ b/index.html
@@ -5,9 +5,10 @@
 <p>I'm hosted with GitHub Pages.</p>
 <p>This page is a WORK IN PROGRESS.
 At the moment I am using it to learn Web Pages.</p>
-</body>
 <div>
         <area href = "page0.html" alt="TEST" 	shape = "circle"   coords="67,237,30">
 		  </map>
 </div>
+<div> Test </div>div>
+</body>
 </html>
