--- a/index.html
+++ b/index.html
@@ -6,9 +6,8 @@
 <p>This page is a WORK IN PROGRESS.
 At the moment I am using it to learn Web Pages.</p>
 <div>
-        <area href = "page0.html" alt="TEST" 	shape = "circle"   coords="67,237,30">
-		  </map>
+        <a href="page0.html">Vai alla pagina interna</a>
 </div>
-<div> Test </div>div>
+<div> Test </div>
 </body>
 </html>
