--- a/page0.html
+++ b/page0.html
@@ -1,10 +1,42 @@
 <!DOCTYPE html>
-<html lang="it">
-	<head>
-		<meta charset="utf-8"> 
-    <title>Pagina in costruzione</title>
-  </head>
-  <body>
-	  <h1>Pagina in costruzione</h1>
-  </body>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>ASCII Art</title>
+    <style>
+        /* Stili per posizionare l'ASCII art in fondo alla pagina */
+        #ascii-art {
+            position: fixed;
+            bottom: 0;
+            left: 0;
+            width: 100%;
+            background-color: #f0f0f0;
+            text-align: center;
+            padding: 10px;
+        }
+    </style>
+</head>
+<body>
+    <!-- Contenuto della pagina -->
+    <h1>Contenuto della pagina</h1>
+    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. ...</p>
+    
+    <!-- ASCII Art in fondo alla pagina -->
+    <div id="ascii-art">
+        <pre>
+
+          $$\      $$\  $$$$$$\  $$$$$$$\  $$\   $$\       $$$$$$\ $$\   $$\       $$$$$$$\  $$$$$$$\   $$$$$$\   $$$$$$\  $$$$$$$\  $$$$$$$$\  $$$$$$\   $$$$$$\  
+          $$ | $\  $$ |$$  __$$\ $$  __$$\ $$ | $$  |      \_$$  _|$$$\  $$ |      $$  __$$\ $$  __$$\ $$  __$$\ $$  __$$\ $$  __$$\ $$  _____|$$  __$$\ $$  __$$\ 
+          $$ |$$$\ $$ |$$ /  $$ |$$ |  $$ |$$ |$$  /         $$ |  $$$$\ $$ |      $$ |  $$ |$$ |  $$ |$$ /  $$ |$$ /  \__|$$ |  $$ |$$ |      $$ /  \__|$$ /  \__|
+          $$ $$ $$\$$ |$$ |  $$ |$$$$$$$  |$$$$$  /          $$ |  $$ $$\$$ |      $$$$$$$  |$$$$$$$  |$$ |  $$ |$$ |$$$$\ $$$$$$$  |$$$$$\    \$$$$$$\  \$$$$$$\  
+          $$$$  _$$$$ |$$ |  $$ |$$  __$$< $$  $$<           $$ |  $$ \$$$$ |      $$  ____/ $$  __$$< $$ |  $$ |$$ |\_$$ |$$  __$$< $$  __|    \____$$\  \____$$\ 
+          $$$  / \$$$ |$$ |  $$ |$$ |  $$ |$$ |\$$\          $$ |  $$ |\$$$ |      $$ |      $$ |  $$ |$$ |  $$ |$$ |  $$ |$$ |  $$ |$$ |      $$\   $$ |$$\   $$ |
+          $$  /   \$$ | $$$$$$  |$$ |  $$ |$$ | \$$\       $$$$$$\ $$ | \$$ |      $$ |      $$ |  $$ | $$$$$$  |\$$$$$$  |$$ |  $$ |$$$$$$$$\ \$$$$$$  |\$$$$$$  |
+          \__/     \__| \______/ \__|  \__|\__|  \__|      \______|\__|  \__|      \__|      \__|  \__| \______/  \______/ \__|  \__|\________| \______/  \______/ 
+                                                                                                                                                                                                                                                                                                                   
+        </pre>
+    </div>
+</body>
 </html>
+
