--- a/index.html
+++ b/index.html
@@ -1,13 +1,17 @@
 <!DOCTYPE html>
 <html>
-<body>
-<h1>Hello World</h1>
-<p>I'm hosted with GitHub Pages.</p>
-<p>This page is a WORK IN PROGRESS.
-At the moment I am using it to learn Web Pages.</p>
-<div>
-        <a href="page0.html">Vai alla pagina interna</a>
-</div>
-<div> Test </div>
-</body>
+        <header>
+                <meta name="author" content="Giova-Dev">
+        </header>
+        <body>
+                <h1>Hello World</h1>
+                <p>I'm hosted with GitHub Pages.</p>
+                <p>This page is a WORK IN PROGRESS.<br>
+                At the moment I am using it to learn Web Pages.</p>
+                <ul>
+                        <li>>a href="page0.html">Page 0</a></li>
+                        <li>>a href="page1.html">Page 1</a></li>
+                </ul>
+                <div> Test </div>
+        </body>
 </html>
