--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
                 <p>This page is a WORK IN PROGRESS.<br>
                 At the moment I am using it to learn Web Pages.</p>
                 <ul>
-                        <li>>a href="page0.html">Page 0</a></li>
-                        <li>>a href="page1.html">Page 1</a></li>
+                        <li><a href="page0.html">Page 0</a></li>
+                        <li><a href="page1.html">Page 1</a></li>
                 </ul>
                 <div> Test </div>
         </body>
