--- a/page1.html
+++ b/page1.html
@@ -16,6 +16,11 @@
         }
     </style>
 </head>
+<header>
+    <nav>
+        <a href="index.html">Home</a>
+    </nav>
+</header>
 <body>
     <!-- Contenuto della pagina -->
     <h1>Contenuto della pagina</h1>
