--- a/index.html
+++ b/index.html
@@ -1,12 +1,15 @@
 <!DOCTYPE html>
 <html>
-        <header>
+        <head>
                 <meta name="author" content="Giova-Dev">
-        </header>
+                <link rel="stylesheet" href="style.css">
+        </head>
         <body>
-                <h1>Hello World</h1>
+                <header>
+                        <h1>Hello World</h1>
+                </header>
                 <p>I'm hosted with GitHub Pages.</p>
-                <p>This page is a WORK IN PROGRESS.<br>
+                <p>This page is a <i id="work">WORK IN PROGRESS</i>.<br>
                 At the moment I am using it to learn Web Pages.</p>
                 <ul>
                         <li><a href="page0.html">Page 0</a></li>
