--- a/index.html
+++ b/index.html
@@ -7,6 +7,10 @@
         <body>
                 <header>
                         <h1>Hello World</h1>
+                        <p id="links"> 
+                                <a href="page0.html" class="link">Page 0</a>
+                                <a href="page1.html" class="link">Page 1</a>
+                        </p>
                 </header>
                 <p>I'm hosted with GitHub Pages.</p>
                 <p>This page is a <i id="work">WORK IN PROGRESS</i>.<br>
