--- a/index.html
+++ b/index.html
@@ -1,24 +1,25 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
         <head>
+                <meta charset="UTF-8">
                 <meta name="author" content="Giova-Dev">
-                <link rel="stylesheet" href="style.css">
+                <link rel="stylesheet" href="index-style.css">
+                <title>My Page</title>
         </head>
         <body>
                 <header>
                         <h1>Hello World</h1>
-                        <p id="links"> 
+                        <p id="main-links"> 
                                 <a href="page0.html" class="link">Page 0</a>
                                 <a href="page1.html" class="link">Page 1</a>
                         </p>
                 </header>
-                <p>I'm hosted with GitHub Pages.</p>
-                <p>This page is a <i id="work">WORK IN PROGRESS</i>.<br>
-                At the moment I am using it to learn Web Pages.</p>
-                <ul>
-                        <li><a href="page0.html">Page 0</a></li>
-                        <li><a href="page1.html">Page 1</a></li>
-                </ul>
-                <div> Test </div>
+                <div id="main">
+                        <p>I'm hosted with GitHub Pages.</p>
+                        <p>This page is a <i id="work">WORK IN PROGRESS</i>.<br>
+                        At the moment I am using it to learn Web Pages.</p>
+                        <div style="color: #00ff00"> Test </div>
+                </div>
+                
         </body>
 </html>
