--- a/index.html
+++ b/index.html
@@ -9,10 +9,10 @@
         <body>
                 <header>
                         <h1>Hello World</h1>
-                        <p id="main-links"> 
+                        <nav id="main-links"> 
                                 <a href="page0.html" class="link">Page 0</a>
                                 <a href="page1.html" class="link">Page 1</a>
-                        </p>
+                        </nav>
                 </header>
                 <div id="main">
                         <p>I'm hosted with GitHub Pages.</p>
