--- a/page0.html
+++ b/page0.html
@@ -2,9 +2,8 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta charset="UTF-8">
     <meta name="author" content="Giova-Dev">
-    <link rel="stylesheet" href="index-style.css">
+    <link rel="stylesheet" href="page0-style.css">
     <title>ASCII Art</title>
 </head>
 <body>
@@ -16,7 +15,7 @@
     </header>
     <div id="main">
         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. ...</p>
-        <pre style="color: white;">
+        <pre style="color: #cc00cc;">
             <span style="font-size: 0.5em; text-decoration: none; display: block;">
 $$\      $$\  $$$$$$\  $$$$$$$\  $$\   $$\       $$$$$$\ $$\   $$\       $$$$$$$\  $$$$$$$\   $$$$$$\   $$$$$$\  $$$$$$$\  $$$$$$$$\  $$$$$$\   $$$$$$\  
 $$ | $\  $$ |$$  __$$\ $$  __$$\ $$ | $$  |      \_$$  _|$$$\  $$ |      $$  __$$\ $$  __$$\ $$  __$$\ $$  __$$\ $$  __$$\ $$  _____|$$  __$$\ $$  __$$\ 
@@ -31,4 +30,3 @@ $$  /   \$$ | $$$$$$  |$$ |  $$ |$$ | \$$\       $$$$$$\ $$ | \$$ |      $$ |   
     </div>
 </body>
 </html>
-
