--- a/page1.html
+++ b/page1.html
@@ -2,44 +2,31 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="author" content="Giova-Dev">
+    <link rel="stylesheet" href="page1-style.css">
     <title>ASCII Art</title>
-    <style>
-        /* Stili per posizionare l'ASCII art in fondo alla pagina */
-        #ascii-art {
-            bottom: 0;
-            left: 0;
-            width: 100%;
-            background-color: #f0f0f0;
-            text-align: center;
-            padding: 10px;
-        }
-    </style>
 </head>
 <body>
     <header>
-        <nav>
-            <a href="index.html">Home</a>
+        <h1>Contenuto della pagina</h1>
+        <nav id="main-links">
+            <a class="link" href="index.html">Home</a>
         </nav>
     </header>
-    <!-- Contenuto della pagina -->
-    <h1>Contenuto della pagina</h1>
-    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. ...</p>
-    
-    <!-- ASCII Art in fondo alla pagina -->
-    <div id="ascii-art">
-        <pre>
-
-          $$\      $$\  $$$$$$\  $$$$$$$\  $$\   $$\       $$$$$$\ $$\   $$\       $$$$$$$\  $$$$$$$\   $$$$$$\   $$$$$$\  $$$$$$$\  $$$$$$$$\  $$$$$$\   $$$$$$\  
-          $$ | $\  $$ |$$  __$$\ $$  __$$\ $$ | $$  |      \_$$  _|$$$\  $$ |      $$  __$$\ $$  __$$\ $$  __$$\ $$  __$$\ $$  __$$\ $$  _____|$$  __$$\ $$  __$$\ 
-          $$ |$$$\ $$ |$$ /  $$ |$$ |  $$ |$$ |$$  /         $$ |  $$$$\ $$ |      $$ |  $$ |$$ |  $$ |$$ /  $$ |$$ /  \__|$$ |  $$ |$$ |      $$ /  \__|$$ /  \__|
-          $$ $$ $$\$$ |$$ |  $$ |$$$$$$$  |$$$$$  /          $$ |  $$ $$\$$ |      $$$$$$$  |$$$$$$$  |$$ |  $$ |$$ |$$$$\ $$$$$$$  |$$$$$\    \$$$$$$\  \$$$$$$\  
-          $$$$  _$$$$ |$$ |  $$ |$$  __$$< $$  $$<           $$ |  $$ \$$$$ |      $$  ____/ $$  __$$< $$ |  $$ |$$ |\_$$ |$$  __$$< $$  __|    \____$$\  \____$$\ 
-          $$$  / \$$$ |$$ |  $$ |$$ |  $$ |$$ |\$$\          $$ |  $$ |\$$$ |      $$ |      $$ |  $$ |$$ |  $$ |$$ |  $$ |$$ |  $$ |$$ |      $$\   $$ |$$\   $$ |
-          $$  /   \$$ | $$$$$$  |$$ |  $$ |$$ | \$$\       $$$$$$\ $$ | \$$ |      $$ |      $$ |  $$ | $$$$$$  |\$$$$$$  |$$ |  $$ |$$$$$$$$\ \$$$$$$  |\$$$$$$  |
-          \__/     \__| \______/ \__|  \__|\__|  \__|      \______|\__|  \__|      \__|      \__|  \__| \______/  \______/ \__|  \__|\________| \______/  \______/ 
-                                                                                                                                                                                                                                                                                                                   
-        </pre>
+    <div id="main">
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. ...</p>
+        <pre style="color:#cccc00;">
+            <span style="font-size: 0.5em; text-decoration: none; display: block;">
+$$\      $$\  $$$$$$\  $$$$$$$\  $$\   $$\       $$$$$$\ $$\   $$\       $$$$$$$\  $$$$$$$\   $$$$$$\   $$$$$$\  $$$$$$$\  $$$$$$$$\  $$$$$$\   $$$$$$\  
+$$ | $\  $$ |$$  __$$\ $$  __$$\ $$ | $$  |      \_$$  _|$$$\  $$ |      $$  __$$\ $$  __$$\ $$  __$$\ $$  __$$\ $$  __$$\ $$  _____|$$  __$$\ $$  __$$\ 
+$$ |$$$\ $$ |$$ /  $$ |$$ |  $$ |$$ |$$  /         $$ |  $$$$\ $$ |      $$ |  $$ |$$ |  $$ |$$ /  $$ |$$ /  \__|$$ |  $$ |$$ |      $$ /  \__|$$ /  \__|
+$$ $$ $$\$$ |$$ |  $$ |$$$$$$$  |$$$$$  /          $$ |  $$ $$\$$ |      $$$$$$$  |$$$$$$$  |$$ |  $$ |$$ |$$$$\ $$$$$$$  |$$$$$\    \$$$$$$\  \$$$$$$\  
+$$$$  _$$$$ |$$ |  $$ |$$  __$$< $$  $$<           $$ |  $$ \$$$$ |      $$  ____/ $$  __$$< $$ |  $$ |$$ |\_$$ |$$  __$$< $$  __|    \____$$\  \____$$\ 
+$$$  / \$$$ |$$ |  $$ |$$ |  $$ |$$ |\$$\          $$ |  $$ |\$$$ |      $$ |      $$ |  $$ |$$ |  $$ |$$ |  $$ |$$ |  $$ |$$ |      $$\   $$ |$$\   $$ |
+$$  /   \$$ | $$$$$$  |$$ |  $$ |$$ | \$$\       $$$$$$\ $$ | \$$ |      $$ |      $$ |  $$ | $$$$$$  |\$$$$$$  |$$ |  $$ |$$$$$$$$\ \$$$$$$  |\$$$$$$  |
+\__/     \__| \______/ \__|  \__|\__|  \__|      \______|\__|  \__|      \__|      \__|  \__| \______/  \______/ \__|  \__|\________| \______/  \______/  
+            </span>        
+        </pre>                                                                                                                                                                                                                                                                                                          
     </div>
 </body>
 </html>
