--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
                 <meta charset="UTF-8">
                 <meta name="author" content="Giova-Dev">
                 <link rel="stylesheet" href="index-style.css">
+                <meta name="viewport" content="width=device-width" />
                 <title>My Page</title>
         </head>
         <body>
