--- a/page0.html
+++ b/page0.html
@@ -4,29 +4,47 @@
     <meta charset="UTF-8">
     <meta name="author" content="Giova-Dev">
     <link rel="stylesheet" href="page0-style.css">
+    <meta name="viewport" content="width=device-width" />
     <title>ASCII Art</title>
 </head>
 <body>
     <header>
-        <h1>Contenuto della pagina</h1>
+        <h1>Contenuto della pagina 0</h1>
         <nav id="main-links">
             <a class="link" href="index.html">Home</a>
         </nav>
     </header>
-    <div id="main">
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. ...</p>
-        <pre style="color: #cc00cc;">
-            <span style="font-size: 0.5em; text-decoration: none; display: block;">
-$$\      $$\  $$$$$$\  $$$$$$$\  $$\   $$\       $$$$$$\ $$\   $$\       $$$$$$$\  $$$$$$$\   $$$$$$\   $$$$$$\  $$$$$$$\  $$$$$$$$\  $$$$$$\   $$$$$$\  
-$$ | $\  $$ |$$  __$$\ $$  __$$\ $$ | $$  |      \_$$  _|$$$\  $$ |      $$  __$$\ $$  __$$\ $$  __$$\ $$  __$$\ $$  __$$\ $$  _____|$$  __$$\ $$  __$$\ 
-$$ |$$$\ $$ |$$ /  $$ |$$ |  $$ |$$ |$$  /         $$ |  $$$$\ $$ |      $$ |  $$ |$$ |  $$ |$$ /  $$ |$$ /  \__|$$ |  $$ |$$ |      $$ /  \__|$$ /  \__|
-$$ $$ $$\$$ |$$ |  $$ |$$$$$$$  |$$$$$  /          $$ |  $$ $$\$$ |      $$$$$$$  |$$$$$$$  |$$ |  $$ |$$ |$$$$\ $$$$$$$  |$$$$$\    \$$$$$$\  \$$$$$$\  
-$$$$  _$$$$ |$$ |  $$ |$$  __$$< $$  $$<           $$ |  $$ \$$$$ |      $$  ____/ $$  __$$< $$ |  $$ |$$ |\_$$ |$$  __$$< $$  __|    \____$$\  \____$$\ 
-$$$  / \$$$ |$$ |  $$ |$$ |  $$ |$$ |\$$\          $$ |  $$ |\$$$ |      $$ |      $$ |  $$ |$$ |  $$ |$$ |  $$ |$$ |  $$ |$$ |      $$\   $$ |$$\   $$ |
-$$  /   \$$ | $$$$$$  |$$ |  $$ |$$ | \$$\       $$$$$$\ $$ | \$$ |      $$ |      $$ |  $$ | $$$$$$  |\$$$$$$  |$$ |  $$ |$$$$$$$$\ \$$$$$$  |\$$$$$$  |
-\__/     \__| \______/ \__|  \__|\__|  \__|      \______|\__|  \__|      \__|      \__|  \__| \______/  \______/ \__|  \__|\________| \______/  \______/  
-            </span>        
-        </pre>                                                                                                                                                                                                                                                                                                          
+    <div class="container">
+        <div class="column">Colonna 1</div>
+        <div class="column">Colonna 2</div>
+        <div class="column">Colonna 3</div>
+        <div class="content1">
+            <p>
+                T Lorem ipsum dolor sit amet, consectetur adipiscing elit. ...
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit. ...
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit. ...
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit. ...
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit. ...
+            </p>
+        </div>
+        <div class="content2">
+            <p>
+                T Lorem ipsum dolor sit amet, consectetur adipiscing elit. ...
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit. ...
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit. ...
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit. ...
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit. ...
+            </p>
+        </div> 
+        <div class="content3">
+            <p>
+                T Lorem ipsum dolor sit amet, consectetur adipiscing elit. ...
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit. ...
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit. ...
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit. ...
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit. ...
+            </p>
+        </div>                                                                                                                                                                                                                                                                           
     </div>
 </body>
 </html>
