--- a/page0.html
+++ b/page0.html
@@ -5,44 +5,46 @@
     <meta name="author" content="Giova-Dev">
     <link rel="stylesheet" href="page0-style.css">
     <meta name="viewport" content="width=device-width" />
-    <title>ASCII Art</title>
+    <title>Finctional Biography</title>
 </head>
 <body>
     <header>
-        <h1>Contenuto della pagina 0</h1>
+        <h1>Emily Johnson</h1>
         <nav id="main-links">
             <a class="link" href="index.html">Home</a>
         </nav>
     </header>
     <div class="container">
-        <div class="column">Colonna 1</div>
-        <div class="column">Colonna 2</div>
+        <div class="column">External Content</div>
+        <div class="column">About Me</div>
         <div class="column">Colonna 3</div>
         <div class="content1">
-            <p>
-                T Lorem ipsum dolor sit amet, consectetur adipiscing elit. ...
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit. ...
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit. ...
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit. ...
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit. ...
+            <h2 style="color: red; text-align: center;">Disclaimer:</h2>
+            <p style="color: #ff0000; text-justify: auto;">
+                This biography is a fictional creation intended for educational purposes only. Any resemblance to real persons, living or dead, is purely coincidental. The content presented here is not based on any actual individual or events.
             </p>
         </div>
         <div class="content2">
+            <h2 style="color: white;">Biography:</h2>
             <p>
-                T Lorem ipsum dolor sit amet, consectetur adipiscing elit. ...
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit. ...
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit. ...
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit. ...
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit. ...
+                Welcome to the world of creativity and innovation! Meet Emily Johnson,
+                a visionary artist born and raised in the vibrant city of New York.
+                From an early age, Emily demonstrated an insatiable passion for art,
+                spending countless hours sketching, painting, and exploring various artistic mediums.
+                Emily's journey into the realm of art began with her fascination for the dynamic interplay of colors and shapes in the bustling cityscape.
+                Inspired by the energy of urban life and the diverse cultures that thrive within it,
+                she embarked on a quest to translate her observations and emotions onto canvas.
+            </p>
+            <p>
+                Driven by a relentless pursuit of self-expression, Emily honed her skills through formal education and hands-on experience. She earned her Bachelor of Fine Arts degree from the prestigious School of Visual Arts in Manhattan, where she delved deep into the nuances of contemporary art and honed her craft under the guidance of esteemed mentors.
+                Throughout her career, Emily's work has been characterized by its bold experimentation and boundless imagination. Her eclectic portfolio spans a myriad of genres, from abstract expressionism to surrealism, each piece a testament to her boundless creativity and unwavering dedication to her craft.
+                As an artist, Emily seeks to challenge conventional perspectives and provoke thought through her work. She invites viewers to embark on a journey of discovery, inviting them to explore the intricacies of the human experience and the limitless possibilities of the imagination.
             </p>
         </div> 
         <div class="content3">
+            <img src="/res/anonymous-user.jpg" alt="ERROR">
             <p>
-                T Lorem ipsum dolor sit amet, consectetur adipiscing elit. ...
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit. ...
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit. ...
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit. ...
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit. ...
+                I don't know what to put in this space.
             </p>
         </div>                                                                                                                                                                                                                                                                           
     </div>
