--- a/page0.html
+++ b/page0.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="author" content="Giova-Dev">
     <link rel="stylesheet" href="page0-style.css">
-    <meta name="viewport" content="width=device-width" />
+ <!--   <meta name="viewport" content="width=device-width" /> -->
     <title>Finctional Biography</title>
 </head>
 <body>
@@ -20,8 +20,10 @@
         <div class="column">Colonna 3</div>
         <div class="content1">
             <h2 style="color: red; text-align: center;">Disclaimer:</h2>
-            <p style="color: #ff0000; text-justify: auto;">
-                This biography is a fictional creation intended for educational purposes only. Any resemblance to real persons, living or dead, is purely coincidental. The content presented here is not based on any actual individual or events.
+            <p style="color: #ff0000; text-justify: auto; font-size: 16pt;">
+                This biography is a fictional creation intended for educational purposes only.<br>
+                Any resemblance to real persons, living or dead, is purely coincidental.<br>
+                The content presented here is not based on any actual individual or events.
             </p>
         </div>
         <div class="content2">
@@ -42,9 +44,9 @@
             </p>
         </div> 
         <div class="content3">
-            <img src="/res/anonymous-user.jpg" alt="ERROR">
-            <p>
-                I don't know what to put in this space.
+            <img src="res/anonymous-user.jpg" alt="ERROR" width="100" style="display: block; margin-left: auto; margin-right: 5%;">
+            <p style="color: violet;">
+                It's me, hi, I'm the problem, it's me <br> I'm the problem, it's me
             </p>
         </div>                                                                                                                                                                                                                                                                           
     </div>
