--- a/page1.html
+++ b/page1.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="author" content="Giova-Dev">
     <link rel="stylesheet" href="page1-style.css">
-    <meta name="viewport" content="width=device-width" />
+<!--   <meta name="viewport" content="width=device-width" /> -->
     <title>ASCII Art</title>
 </head>
 <body>
