--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
                 <header>
                         <h1>Hello World</h1>
                         <nav id="main-links"> 
-                                <a href="page0.html" class="link">Bio</a>
-                                <a href="page1.html" class="link">Simple Game</a>
+                                <a href="game1.html" class="link">Game 1</a>
+                                <a href="game2.html" class="link">Game 2</a>
                         </nav>
                 </header>
                 <div id="main">
