--- a/game1.html
+++ b/game1.html
@@ -53,7 +53,7 @@
             }
             #record {
                 display: inline-block;
-                font-style: bold;
+                font: bold;
             }
             #container {
                 display: flex;
@@ -152,7 +152,7 @@
             <form id="myForm">
             <button type="submit" id="start">Avvia</button>
             </form>
-            <div id style="margin: 40px; font-size:36px;">
+            <div style="margin: 40px; font-size:36px;">
                 Il tuo record è <div id="record"></div>
             </div>
         </div>
