--- a/game2.html
+++ b/game2.html
@@ -343,7 +343,7 @@
             });
 
             // touch
-            document.getElementById('container').addEventListener('touchstart', function(event) {
+            document.getElementById('touch').addEventListener('touchstart', function(event) {
                 event.preventDefault();
                 if(!gameEnded)
                     drop(currPos);
