--- a/game2.html
+++ b/game2.html
@@ -2,65 +2,8 @@
 <html lang="it-IT">
     <head>
         <meta charset="UTF-8">
+        <link rel="stylesheet" href="game2.css">
         <title>Exam Simulation</title>
-
-        <style>
-            body {
-                background-color: rgb(92, 92, 92);
-            }
-            #container{
-                display: flex;
-                flex-direction: column;
-                align-items: center;
-            }
-            #mainTable{
-                background-color: white;
-                border-collapse: collapse;
-                border: 1px solid black;
-                margin-top: 50px;
-                margin-bottom: 100px;
-            }
-            th{
-                background-color: aqua;
-            }
-            th, td {
-                border:  1px solid black;
-                width: 45px;
-                height: 45px;
-                text-align: center;
-                vertical-align:middle;
-                font: bold;
-            }
-            button{
-                padding: 10px;
-                font-size: 24px;
-            }
-
-            /* OLD STYLE */
-            h1{
-                text-align: center;
-                background-color: #15a1ff;
-                border-radius: 2%;
-                border: 0.1em solid black;
-                padding: 1px;
-                margin: 25px 35%;
-            }
-            .link{
-                border: 1px rgb(0, 0, 0);
-                flex: 1;
-                text-align: center;
-                margin-left: 5%;
-                margin-right: 5%;
-                text-decoration: none;
-                color: black;
-            }
-            #main-links {
-                border: 1px solid rgb(189, 185, 185);
-                box-shadow: 0 2px 4px #000000;
-                display: flex;
-                margin: 25px 40%;
-            }
-        </style>
     </head>
     <body>
         <header>
