--- a/game1.html
+++ b/game1.html
@@ -2,91 +2,8 @@
 <html lang="it">
     <head>
         <meta charset="UTF-8">
+        <link rel="stylesheet" href="game1.css">
         <title>Esercizio d'esame</title>
-
-        <style>
-            table {
-                border-collapse: collapse;
-                border: 5px solid black;
-                margin: 30px 30px;
-            }
-            td {
-                background-color: white;
-                height: 80px;
-                width: 80px;
-                border: 1px solid;
-                text-align: center;
-                font-size: 32px;
-            }
-            #start {
-                background-color: whitesmoke;
-                font: bold;
-                padding: 15px 15px;
-                font-size: 36px;
-            }
-            .box {
-                border: 0px;
-                background-color: white;
-                font-size: 32px;
-                width: 100%;
-                height: 100%;
-                margin-top: 1px;
-                vertical-align: middle;
-            }
-            .correct {
-                border: 0px;
-                background-color: green;
-                font-size: 32px;
-                width: 100%;
-                height: 100%;
-                margin-top: 1px;
-                vertical-align: middle;
-            }
-            .error {
-                border: 0px;
-                background-color: red;
-                font-size: 32px;
-                width: 100%;
-                height: 100%;
-                margin-top: 1px;
-                vertical-align: middle;
-            }
-            #record {
-                display: inline-block;
-                font: bold;
-            }
-            #container {
-                display: flex;
-                flex-direction: column;
-                justify-content: center;
-                align-items: center;
-            }
-            
-            /* OLD STYLE */
-            h1{
-                text-align: center;
-                background-color: #15a1ff;
-                border-radius: 2%;
-                border: 0.1em solid black;
-                padding: 1px;
-                margin: 25px 35%;
-            }
-            .link{
-                border: 1px rgb(0, 0, 0);
-                flex: 1;
-                text-align: center;
-                margin-left: 5%;
-                margin-right: 5%;
-                text-decoration: none;
-                color: black;
-            }
-            #main-links {
-                border: 1px solid rgb(189, 185, 185);
-                box-shadow: 0 2px 4px #000000;
-                display: flex;
-                margin: 25px 40%;
-            }
-        </style>
     </head>
     <body style="background-color: #ff00ff;">
         <header>
