--- a/sudoku/home.html
+++ b/sudoku/home.html
@@ -11,7 +11,15 @@
             <table id="mainTable">
 
             </table>
-            <button onclick="start()">START</button>
+            <button id="start" onclick="benchMark()">START</button>
+
+            <div id="benchMark">
+                <div id="stats">STATISTICHE</div>
+                <div id="result">Riusciti: 0</div>
+                <div id="media">Media: ?</div>
+                <div id="tent">Tentativi: 0</div>
+            </div>
         </div>
+
     </body>
 </html>
