--- a/sudoku/home.html
+++ b/sudoku/home.html
@@ -11,7 +11,7 @@
             <table id="mainTable">
 
             </table>
-            <button id="start" onclick="benchMark()">START</button>
+            <button id="start" onclick="start()">START</button>
 
             <div id="benchMark">
                 <div id="stats">STATISTICHE</div>
