--- a/sudoku/home.html
+++ b/sudoku/home.html
@@ -12,13 +12,12 @@
 
             </table>
             <button id="start" onclick="start()">START</button>
-
-            <div id="benchMark">
-                <div id="stats">STATISTICHE</div>
-                <div id="result">Riusciti: 0</div>
-                <div id="media">Media: ?</div>
-                <div id="tent">Tentativi: 0</div>
-            </div>
+        </div>
+        <div id="modalita">
+            <h2>Scegli la difficoltà:</h2>
+            <button onclick="chooseDifficulty(2)">Facile</button>
+            <button onclick="chooseDifficulty(1)">Media</button>
+            <button onclick="chooseDifficulty(0)">Difficile</button>
         </div>
 
     </body>
