--- a/sudoku/home.html
+++ b/sudoku/home.html
@@ -5,6 +5,7 @@
         <meta charset="UTF-8">
         <script src="sudoku.js"></script>
         <link rel="stylesheet" href="sudoku.css">
+        <meta name="viewport" content="width=device-width">
     </head>
     <body onload="disegna()">
         <div class="container">
