--- a/sudoku/home.html
+++ b/sudoku/home.html
@@ -12,13 +12,16 @@
             <table id="mainTable">
 
             </table>
-            <button id="start" onclick="start()">START</button>
+            <button id="start" onclick="fine()">START</button>
         </div>
         <div id="modalita">
             <h2>Scegli la difficoltà:</h2>
             <button onclick="chooseDifficulty(2)">Facile</button>
             <button onclick="chooseDifficulty(1)">Media</button>
             <button onclick="chooseDifficulty(0)">Difficile</button>
+        </div>
+        <div id="completato">
+            <h2 style="text-align: center;">Congratulazioni!!!</h2>
         </div>
 
     </body>
