--- a/sudoku/home.html
+++ b/sudoku/home.html
@@ -12,7 +12,7 @@
             <table id="mainTable">
 
             </table>
-            <button id="start" onclick="fine()">START</button>
+            <button id="start" onclick="start()">START</button>
         </div>
         <div id="modalita">
             <h2>Scegli la difficoltà:</h2>
