--- a/BabboNatale/index.html
+++ b/BabboNatale/index.html
@@ -7,6 +7,10 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <audio autoplay loop>
+        <source src="res/All I Want For Christmas Is You-aicover.mp3" type="audio/mpeg">
+        Il tuo browser non supporta il tag audio.
+    </audio>
     <div class="container">
         <header>
             <h1>Scopri chi è il tuo Babbo Natale Segreto!</h1>
