--- a/index.html
+++ b/index.html
@@ -3,58 +3,96 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Seleziona Pagina</title>
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            background-color: #f0f8ff;
-            text-align: center;
-            padding-top: 50px;
-        }
-
-        h1 {
-            font-size: 2em;
-            color: #333;
-        }
-
-        .button-container {
-            margin-top: 30px;
-        }
-
-        .btn {
-            display: inline-block;
-            padding: 15px 30px;
-            font-size: 1.2em;
-            color: white;
-            background-color: #007bff;
-            border: none;
-            border-radius: 5px;
-            text-decoration: none;
-            margin: 10px;
-            cursor: pointer;
-            transition: background-color 0.3s;
-        }
-
-        .btn:hover {
-            background-color: #0056b3;
-        }
-
-        .btn:active {
-            background-color: #003f7f;
-        }
-    </style>
+    <title>Babbo Natale Segreto</title>
+    <link rel="stylesheet" href="style.css">
+    <script src="https://cdn.auth0.com/js/auth0-spa-js/1.18/auth0-spa-js.production.js"></script>
 </head>
 <body>
+    <div class="container">
+        <header>
+            <h1>Scopri chi è il tuo Babbo Natale Segreto!</h1>
+            <img src="res/christmas_hat.png" alt="Cappello di Natale" class="header-image">
+        </header>
 
-    <h1>Seleziona una Pagina</h1>
+        <!-- Pulsante di login iniziale -->
+        <div id="auth-container" class="input-container">
+            <button id="login-button">Login</button>
+        </div>
 
-    <div class="button-container">
-        <!-- Primo tasto che manda a index_beta.html -->
-        <a href="index_beta.html" class="btn">Vai a index_beta</a>
-        
-        <!-- Secondo tasto che manda a BabboNatale/index.html -->
-        <a href="BabboNatale/index.html" class="btn">Scopri il BabboNatale Segreto</a>
+        <!-- Sezione per la ricerca automatica dopo l'autenticazione -->
+        <div id="search-container" style="display: none;">
+            <div class="result-container">
+                <p id="result">Scopri chi sei il Babbo Natale segreto!</p>
+            </div>
+            <button id="logout-button" style="display: none;">Logout</button>
+        </div>
+
+        <footer>
+            <p style="color: red; font-weight: bold; font-style: italic;">🎄 Buone feste da tutti noi! 🎄</p>
+        </footer>
     </div>
 
+    <script src="auth.js"></script>
+    <script>
+        let decryptedData = null;
+
+        async function loadAndDecryptFile() {
+            const key = '0123456789abcdef';
+            const encodedKey = new TextEncoder().encode(key);
+
+            try {
+                const response = await fetch('res/nomi.encrypted');
+                const encryptedData = await response.arrayBuffer();
+                const iv = new Uint8Array(encryptedData.slice(0, 16));
+                const ciphertext = encryptedData.slice(16);
+
+                const cryptoKey = await window.crypto.subtle.importKey(
+                    'raw',
+                    encodedKey,
+                    { name: 'AES-CBC' },
+                    false,
+                    ['decrypt']
+                );
+
+                const decryptedArrayBuffer = await window.crypto.subtle.decrypt(
+                    {
+                        name: 'AES-CBC',
+                        iv: iv
+                    },
+                    cryptoKey,
+                    ciphertext
+                );
+
+                decryptedData = new TextDecoder().decode(decryptedArrayBuffer);
+            } catch (error) {
+                console.error('Errore durante la decrittazione:', error);
+            }
+        }
+
+        async function searchByName(name) {
+            if (decryptedData && name) {
+                const rows = decryptedData.split('\n');
+                let found = false;
+
+                rows.forEach(row => {
+                    const [nameLeft, nameRight] = row.split(',');
+                    if (nameLeft.trim() === name) {
+                        document.getElementById('result').textContent = `Sei il Babbo Natale Segreto di ${nameRight.trim()}! 🎅`;
+                        found = true;
+                    }
+                });
+
+                if (!found) {
+                    document.getElementById('result').textContent = `Nome ${name} non trovato`;
+                }
+            } else {
+                document.getElementById('result').textContent = 'Errore durante la ricerca. Riprova!';
+            }
+        }
+
+        window.onload = function() {
+            loadAndDecryptFile();
+        };
+    </script>
 </body>
 </html>
