--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Login Auth0</title>
+    <title>Babbo Natale Segreto</title>
     <link rel="stylesheet" href="style.css">
     <script src="https://cdn.auth0.com/js/auth0-spa-js/2.0/auth0-spa-js.production.js"></script>
     <script src="auth.js" defer></script>
@@ -11,20 +11,91 @@
 <body>
     <div class="container">
         <header>
-            <h1>Login con Auth0 n2</h1>
+            <h1>Scopri chi è il tuo Babbo Natale Segreto!</h1>
+            <img src="res/christmas_hat.png" alt="Cappello di Natale" class="header-image">
         </header>
+
+
         <div id="auth-container">
             <button id="login-button">Accedi</button>
         </div>
         <div id="user-data-container" style="display: none;">
-            <h2>Informazioni Utente</h2>
+            <p id="result">Scopri chi sei il Babbo Natale segreto!</p>
+
             <div id="user-data"></div>
             <button id="logout-button" style="display: none;">Esci</button>
         </div>
         <div id="profile">
 
         </div>
+
+        <footer>
+            <p style="color: red; font-weight: bold; font-style: italic;">🎄 Buone feste da tutti noi! 🎄</p>
+        </footer>
     </div>
+
     <script src="auth.js"></script>
+    <script>
+        let decryptedData = null;
+
+        async function loadAndDecryptFile() {
+            const key = '0123456789abcdef';
+            const encodedKey = new TextEncoder().encode(key);
+
+            try {
+                const response = await fetch('res/nomi.encrypted');
+                const encryptedData = await response.arrayBuffer();
+                const iv = new Uint8Array(encryptedData.slice(0, 16));
+                const ciphertext = encryptedData.slice(16);
+
+                const cryptoKey = await window.crypto.subtle.importKey(
+                    'raw',
+                    encodedKey,
+                    { name: 'AES-CBC' },
+                    false,
+                    ['decrypt']
+                );
+
+                const decryptedArrayBuffer = await window.crypto.subtle.decrypt(
+                    {
+                        name: 'AES-CBC',
+                        iv: iv
+                    },
+                    cryptoKey,
+                    ciphertext
+                );
+
+                decryptedData = new TextDecoder().decode(decryptedArrayBuffer);
+            } catch (error) {
+                console.error('Errore durante la decrittazione:', error);
+            }
+        }
+
+        async function searchByName(name) {
+            if (decryptedData && name) {
+                const rows = decryptedData.split('\n');
+                let found = false;
+
+                rows.forEach(row => {
+                    const [nameLeft, nameRight] = row.split(',');
+                    if (nameLeft.trim() === name) {
+                        document.getElementById('result').textContent = `Sei il Babbo Natale Segreto di ${nameRight.trim()}! 🎅`;
+                        found = true;
+                    }
+                });
+
+                if (!found) {
+                    document.getElementById('result').textContent = `Nome ${name} non trovato`;
+                }
+            } else {
+                document.getElementById('result').textContent = 'Errore durante la ricerca. Riprova!';
+            }
+        }
+
+        window.onload = function() {
+            loadAndDecryptFile();
+        };
+
+    </script>
 </body>
 </html>
