--- a/index.html
+++ b/index.html
@@ -26,7 +26,10 @@
             <button id="logout-button" style="display: none;">Esci</button>
         </div>
         <div id="profile">
+        </div>
 
+        <div id="waiter">
+            
         </div>
 
         <footer>
