removed bug Forza4
New css styel for waiter in BabboNataleSegreto, debugged Audio

--- a/index.html
+++ b/index.html
@@ -22,9 +22,10 @@
         <div id="user-data-container" style="display: none;">
             <p id="result">Scopri chi sei il Babbo Natale segreto!</p>
 
-            <div id="user-data"></div>
-            <button id="logout-button" style="display: none;">Esci</button>
+            <div id="user-data">
+            </div>
         </div>
+        <button id="logout-button" style="display: none;">Esci</button>
         <div id="profile">
         </div>
 
