--- a/Miri/index.html
+++ b/Miri/index.html
@@ -45,7 +45,7 @@
   <h1>🎈 Scegli una Pagina 🎈</h1>
   <ul>
     <li><a href="Countdown.html">Countdown Compleanno</a></li>
-    <li><a href="hearth.html">Cuori Danzanti</a></li>
+    <li><a href="AreYouFree.html">Sei libera?</a></li>
   </ul>
 </body>
 </html>
