--- a/Miri/index.html
+++ b/Miri/index.html
@@ -46,6 +46,7 @@
   <ul>
     <li><a href="Countdown.html">Countdown Compleanno</a></li>
     <li><a href="AreYouFree.html">Sei libera?</a></li>
+<li><a href="RaceTime.html">Time to race</a></li>
   </ul>
 </body>
 </html>
