--- a/Miri/index.html
+++ b/Miri/index.html
@@ -47,6 +47,7 @@
     <li><a href="Countdown.html">Countdown Compleanno</a></li>
     <li><a href="AreYouFree.html">Sei libera?</a></li>
 <li><a href="RaceTime.html">Time to race</a></li>
+<li><a href="Comfort.html">Devi essere consolata?</a></li>
   </ul>
 </body>
 </html>
