--- a/Miri/Comfort.html
+++ b/Miri/Comfort.html
@@ -67,17 +67,18 @@
     <span class="heart">💗</span>
   </div>
 
-  <h1>You’re Not Alone</h1>
-
+  <h1>Non Sei Sola</h1>
+  
   <p>
-    Sometimes things don’t go as planned, and that’s okay.<br>
-    You’re loved, appreciated, and stronger than you think.<br>
-    Take a deep breath. This moment will pass. And I’m here for you. ❤️
+    A volte le cose non vanno come previsto, e va bene così.<br>
+    Sei amata, apprezzata e più forte di quanto pensi.<br>
+    Fai un respiro profondo. Questo momento passerà. E io sono qui per te. ❤️
   </p>
-
-  <button class="hug" onclick="alert('💌 Sending you a big virtual hug!')">
-    Send Me a Hug
+  
+  <button class="hug" onclick="alert('💌 Ti mando un grande abbraccio virtuale!')">
+    Mandami un Abbraccio
   </button>
+
 
   <div class="hearts" style="margin-top: 50px;">
     <span class="heart">💓</span>
