--- a/AboutMe/index.html
+++ b/AboutMe/index.html
@@ -125,7 +125,7 @@
                 <div class="project-card">
                     <h3>TrackHub</h3>
                     <p>Gestionale per organizzare studio ed impegni</p>
-                    <a href="https://github.com/Giova-Dev/trackhub" class="btn">><i class="fab fa-github"></i>Vedi repository</a>
+                    <a href="https://github.com/Giova-Dev/trackhub" class="btn"><i class="fab fa-github"></i> Vedi repository</a>
                 </div>
             </div>
         </section>
