--- a/Miri/Hearts.html
+++ b/Miri/Hearts.html
@@ -17,14 +17,19 @@
     }
 
     #ascii {
-      white-space: pre;
-      text-align: center;
-      font-size: 14px;
-      background: linear-gradient(to right, #ff4d4d, #ff99cc);
-      -webkit-background-clip: text;
-      -webkit-text-fill-color: transparent;
-      transition: opacity 1s ease, background 2s ease;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      transition: opacity 1s ease;
       opacity: 1;
+    }
+
+    .line {
+      font-size: 14px;
+      background-clip: text;
+      -webkit-background-clip: text;
+      color: transparent;
+      -webkit-text-fill-color: transparent;
     }
 
     .fade-out {
@@ -132,13 +137,22 @@
       ascii.classList.add("fade-out");
 
       setTimeout(() => {
+        ascii.innerHTML = ""; // Pulisce vecchio contenuto
+
         const heart = hearts[index];
-        ascii.textContent = heart.art;
-        ascii.style.background = `linear-gradient(to right, ${heart.gradient[0]}, ${heart.gradient[1]})`;
+        const lines = heart.art.trim().split("\n");
+
+        lines.forEach(line => {
+          const span = document.createElement("span");
+          span.className = "line";
+          span.textContent = line;
+          span.style.background = `linear-gradient(to right, ${heart.gradient[0]}, ${heart.gradient[1]})`;
+          ascii.appendChild(span);
+        });
 
         ascii.classList.remove("fade-out");
         index = (index + 1) % hearts.length;
-      }, 1000);
+      }, 800);
     }
 
     updateArt();
