--- a/Miri/index.html
+++ b/Miri/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="it">
+
 <head>
   <meta charset="UTF-8">
   <title>Indice delle Pagine</title>
@@ -41,13 +42,16 @@
     }
   </style>
 </head>
+
 <body>
   <h1>🎈 Scegli una Pagina 🎈</h1>
   <ul>
     <li><a href="Countdown.html">Countdown Compleanno</a></li>
     <li><a href="AreYouFree.html">Sei libera?</a></li>
-<li><a href="RaceTime.html">Time to race</a></li>
-<li><a href="Comfort.html">Devi essere consolata?</a></li>
+    <li><a href="RaceTime.html">Time to race</a></li>
+    <li><a href="Comfort.html">Devi essere consolata?</a></li>
+    <li><a href="Cuiricini.html">Cuiricini❤️</a></li>
   </ul>
 </body>
+
 </html>
