--- a/Miri/index.html
+++ b/Miri/index.html
@@ -50,7 +50,7 @@
     <li><a href="AreYouFree.html">Sei libera?</a></li>
     <li><a href="RaceTime.html">Time to race</a></li>
     <li><a href="Comfort.html">Devi essere consolata?</a></li>
-    <li><a href="Cuiricini.html">Cuiricini❤️</a></li>
+    <li><a href="Cuoricini.html">Cuoricini❤️</a></li>
   </ul>
 </body>
 
