--- a/AboutMe/index.html
+++ b/AboutMe/index.html
@@ -80,9 +80,9 @@
             <div class="timeline">
                 <div class="timeline-item">
                     <h3>Laurea in Ingegneria Informatica</h3>
-                    <p class="date">20XX - Presente</p>
+                    <p class="date">2022 - Presente</p>
                     <p>Università degli Studi di ...</p>
-                    <p>Laurea prevista: 2024</p>
+                    <p>Laurea prevista: 2026</p>
                 </div>
             </div>
         </section>
