--- a/AboutMe/index.html
+++ b/AboutMe/index.html
@@ -81,7 +81,7 @@
                 <div class="timeline-item">
                     <h3>Laurea in Ingegneria Informatica</h3>
                     <p class="date">2022 - Presente</p>
-                    <p>Università degli Studi di ...</p>
+                    <p>Università degli Studi di Pisa</p>
                     <p>Laurea prevista: 2026</p>
                 </div>
             </div>
